# docker_youtube_series

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
nginx/: Dockerfile  default.conf  docker-entrypoint.sh
stkapi/: Dockerfile  pyproject.toml
stkapi/stkapi/: server.py
stkapi/tests/: test_stkapi.py
stknginx/: default.conf
stkweb/: .eslintcache  Dockerfile  default.conf  package.json
stkweb/src/: App.js
